--- a/css/styles.css
+++ b/css/styles.css
@@ -186,8 +186,11 @@ body {
   align-items: center;
 
   background-color: #c4c4c4;
-  background-image: 
-    linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
     url(../img/fon.jpg);
   background-repeat: no-repeat;
   background-position: center;
@@ -208,27 +211,13 @@ body {
   text-transform: uppercase;
 }
 
-/* .button {
-  color: var(--title-text-color);
-  background-color: var(--primary-bg-color);
-
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-  border: none;
-
-  align-items: center;
-  text-align: center;
-
-} */
-
 .button-primary {
   display: block;
   width: 200px;
   height: 50px;
   align-items: center;
   text-align: center;
-  /* margin-bottom: 200px; */
-   border-radius: 4px;
+  border-radius: 4px;
   border: none;
 
   font-family: Roboto, sans-serif;
@@ -238,7 +227,7 @@ body {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .hero .button-primary:hover,
@@ -247,15 +236,7 @@ body {
   background-color: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   cursor: pointer;
-  
 }
-/* .button-item .button-secondary:hover,
-.button-item .button-secondary:focus {
-  color: var(--second-accent-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-} */
 
 /* -------------Особенности------------- */
 .visually-hidden {
@@ -306,7 +287,7 @@ body {
   margin-bottom: 10px;
   width: 270px;
   color: var(--title-text-color);
-  font-weight: bold;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
@@ -340,7 +321,10 @@ body {
 .work {
   display: flex;
 }
+
 .work-img {
+  position: relative;
+
   margin: 0 auto;
   flex-basis: calc(100% / 3);
 }
@@ -348,7 +332,29 @@ body {
 .work .work-img + .work-img {
   margin-left: 30px;
 }
+.work-img-text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: inline-block;
+  margin: 0 auto;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  text-align: center;
+  justify-items: center;
 
+  width: 100%;
+  height: 70px;
+  background: rgba(47, 48, 58, 0.8);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #ffffff;
+}
 /* -----------------Наша команда----------------- */
 .our-command {
   background-color: var(--first-bg-color);
@@ -490,7 +496,8 @@ body {
   justify-content: center;
   width: 170px;
   height: 92px;
-  border: 1px solid #afb1b8;   border-radius: 4px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
 }
 .client-icon {
   display: flex;
@@ -637,7 +644,6 @@ body {
 .footer-command-iconbox:hover,
 .footer-command-iconbox:focus {
   background-color: var(--accent-color);
-
 }
 .footer-command-link:hover .footer-command-icon,
 .footer-command-link:focus .footer-command-icon {
