--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
 }
 
 .auth-nav .link {
@@ -168,6 +169,19 @@ body {
   margin-right: 10px;
   fill: var(--primary-text-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.current::after {
+content: '';
+position: absolute;
+width: 100%;
+height: 4px;
+background-color: var(--accent-color);
+border-radius: 2px;
+display: block;
+bottom: -1px;
+
+
+
 }
 
 /* -----------------Герой-------------------- */
