--- a/css/styles.css
+++ b/css/styles.css
@@ -741,7 +741,30 @@ bottom: -1px;
   border-radius: 4px;
   transition: box-shadow 250ms, outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.project-top-wrapper{
+  position: relative;
+}
 
+.project-text{
+position: absolute;
+top: 0;
+left: 0;
+transform: translateY(100%);
+
+font-weight: 400;
+font-size: 18px;
+line-height: 1.56;
+letter-spacing: 0.03em;
+color: #FFFFFF;
+background-color: rgba(33, 150, 243, 0.9);
+height: 100%;
+
+padding-left: 24px;
+padding-right: 24px;
+padding-top: 63px;
+padding-bottom: 63px;
+
+}
 .project-title {
   margin-bottom: 4px;
 
