--- a/css/styles.css
+++ b/css/styles.css
@@ -130,8 +130,7 @@ body {
 
 .header-address:hover,
 .header-address:focus {
-  /* fill: var(--accent-color); */
-  color: var(--accent-color);
+   color: var(--accent-color);
 }
 .header-address:hover .nav-icon,
 .header-address:focus .nav-icon {
@@ -140,7 +139,6 @@ body {
 }
 .auth-nav {
   display: flex;
-  /* outline: 2px solid rgb(173, 14, 125); */
   margin-left: auto;
 }
 .auth-nav .contact-items + .contact-items {
@@ -151,8 +149,6 @@ body {
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
-  /* background-color: teal; */
-
   color: var(--primary-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -171,17 +167,14 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current::after {
-content: '';
-position: absolute;
-width: 100%;
-height: 4px;
-background-color: var(--accent-color);
-border-radius: 2px;
-display: block;
-bottom: -1px;
-
-
-
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  display: block;
+  bottom: -1px;
 }
 
 /* -----------------Герой-------------------- */
@@ -372,8 +365,6 @@ bottom: -1px;
   background-color: var(--first-bg-color);
   padding-top: 94px;
   padding-bottom: 94px;
-
-
 }
 .command {
   display: flex;
@@ -382,8 +373,6 @@ bottom: -1px;
 .command-item {
   margin: 0 auto;
   margin-bottom: 50px;
-
-  /* width: 376px; */
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -398,7 +387,6 @@ bottom: -1px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-
 }
 .command .command-section + .command-section {
   margin-left: 30px;
@@ -497,7 +485,6 @@ bottom: -1px;
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
 .clients-section-icon {
   display: flex;
@@ -508,7 +495,7 @@ bottom: -1px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   transition: border 250ms, border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
+}
 
 .client-icon {
   display: flex;
@@ -669,6 +656,53 @@ bottom: -1px;
   background-color: var(--accent-color);
   border-radius: 50%;
 }
+.backdrop {
+  position: fixed;
+  width: 100vw;
+  height: 100vw;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 250ms, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  width: 530px;
+  min-height: 580px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  position: absolute;
+  top: 250px;
+}
+.close-btn {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-sizing: border-box;
+  border-radius: 50%;
+}
+.modal-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 18px;
+  height: 18px;
+  background-color: transparent;
+}
 /* --------------Портфолио--------------- *
 /* ------------- Наши работы ----------*/
 .our-work {
@@ -741,33 +775,32 @@ bottom: -1px;
   border-radius: 4px;
   transition: box-shadow 250ms, outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-top-wrapper{
+.project-top-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.project-text{
-position: absolute;
-top: 0;
+.project-text {
+  position: absolute;
+  top: 0;
 
-transform: translateY(100%);
+  transform: translateY(100%);
 
-font-weight: 400;
-font-size: 18px;
-line-height: 1.56;
-letter-spacing: 0.03em;
-color: #FFFFFF;
-background-color: rgba(33, 150, 243, 0.9);
-height: 100%;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
+  height: 100%;
 
-padding-left: 24px;
-padding-right: 24px;
-padding-top: 63px;
-padding-bottom: 63px;
-transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 63px;
+  padding-bottom: 63px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.project-box{
+.project-box {
   text-decoration: none;
 }
 .project-title {
@@ -799,9 +832,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   outline: 1px solid rgba(0, 0, 0, 0.15);
 }
-.project-section:hover .project-text{
-transform: translateY(0);
+.project-section:hover .project-text {
+  transform: translateY(0);
 }
-.project-box:focus .project-text{
-transform: translateY(0);
+.project-box:focus .project-text {
+  transform: translateY(0);
 }
